# haskode

./: .gitignore  README.md  haskode.cabal  haskode.example.json  haskode.json
app/: Main.hs
src/Haskode/: Agent.hs  Commands.hs  Config.hs  Core.hs  Display.hs  Extension.hs  Extensions.hs  Patch.hs  Policy.hs  Provider.hs  Session.hs  Tools.hs  Tui.hs
src/Haskode/Provider/: Anthropic.hs  OpenAI.hs  Resolve.hs
src/Haskode/Tools/: FileEdit.hs
test/: Spec.hs
test/Haskode/Test/: Anthropic.hs  Commands.hs  Config.hs  Core.hs  Display.hs  Extension.hs  OpenAI.hs  Patch.hs  Policy.hs  Provider.hs  ProviderResolve.hs  Session.hs  Tools.hs  Tui.hs  Util.hs
