cabal-version:   3.0
name:            haskode
version:         0.1.0.0
synopsis:        A small, hackable, Haskell-native LLM coding harness
description:
  Haskode is a terminal coding agent where Haskell owns the main loop:
  loading config, building context, calling an LLM provider, managing
  typed tool calls, reading/editing project files, running shell commands,
  showing diffs, and recording session events.
license:         0BSD
license-file:    LICENSE
author:          Haskode Contributors
build-type:      Simple

-- ---------------------------------------------------------------------------
-- Common stanza: shared by library, executable, and test-suite
-- ---------------------------------------------------------------------------
common shared
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates
                    -Wincomplete-uni-patterns -Wredundant-constraints

  -- Minimal, widely-available dependencies for the library.
  -- We deliberately avoid exotic libraries at this stage.
  build-depends:
      base       >= 4.17 && < 5
    , aeson      >= 2.0  && < 2.3
    , containers >= 0.6  && < 0.8
    , directory  >= 1.3  && < 1.4
    , filepath   >= 1.4  && < 1.6
    , process    >= 1.6  && < 1.7
    , text       >= 2.0  && < 2.2
    , time       >= 1.9  && < 1.15

-- ---------------------------------------------------------------------------
-- Library
-- ---------------------------------------------------------------------------
library
  import:           shared
  hs-source-dirs:   src
  build-depends:
      bytestring       >= 0.11 && < 0.13
    , brick            >= 2.0  && < 2.11
    , http-client      >= 0.7  && < 0.8
    , http-client-tls  >= 0.3  && < 0.4
    , http-types       >= 0.12 && < 0.13
    , mtl              >= 2.2  && < 2.4
    , vector           >= 0.12 && < 0.14
    , vty              >= 6.0  && < 6.6
  exposed-modules:
    Haskode.Commands
    Haskode.Display
    Haskode.Extension
    Haskode.Extensions
    Haskode.Core
    Haskode.Config
    Haskode.Provider
    Haskode.Provider.Anthropic
    Haskode.Provider.OpenAI
    Haskode.Provider.Resolve
    Haskode.Tools
    Haskode.Policy
    Haskode.Session
    Haskode.Patch
    Haskode.Agent
    Haskode.Tui
  other-modules:
    Haskode.Tools.FileEdit

-- ---------------------------------------------------------------------------
-- Executable
-- ---------------------------------------------------------------------------
executable haskode
  import:           shared
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , haskode
    , optparse-applicative >= 0.16 && < 0.19
    , bytestring           >= 0.11 && < 0.13
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

-- ---------------------------------------------------------------------------
-- Test suite
-- ---------------------------------------------------------------------------
test-suite haskode-test
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    Haskode.Test.Commands
    Haskode.Test.Anthropic
    Haskode.Test.Config
    Haskode.Test.Core
    Haskode.Test.Display
    Haskode.Test.Extension
    Haskode.Test.OpenAI
    Haskode.Test.Patch
    Haskode.Test.Policy
    Haskode.Test.Provider
    Haskode.Test.ProviderResolve
    Haskode.Test.Session
    Haskode.Test.Tools
    Haskode.Test.Tui
    Haskode.Test.Util
  build-depends:
      haskode
    , bytestring >= 0.11 && < 0.13
    , vector     >= 0.12 && < 0.14
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
